sass/site/header/_masthead.scss
#masthead {
	border-bottom: 1px solid $color__background-hr-dark;
	margin-bottom: $masthead__bottom-margin;

	@at-root .header-design-2 & {
		border-bottom: none;
	}

	@at-root .header-design-1 & {
		.sticky-bar-sentinel {
			position: relative;
			top: 1px;
		}
	}

	// Sticky-menu.
	.sticky-bar {
		background: #fff;
		@include clearfix;
		position: relative;
		z-index: 101;

		@include keyframes( stickyMh ) {
			0%, 100% {
				opacity: 1;
			}
			10% {
				opacity: 0.7;
			}
		}

		@at-root {
			.sticky-menu:not( .sticky-bar-out ) & {
				position: relative;
				top: auto;
			}

			.sticky-menu.sticky-bar-out & {
				border-top: none;
				border-bottom: 1px solid $color__background-hr-dark;
				position: fixed;
				top: 0;
				left: 0;
				width: 100%;
				@include clearfix;
				@include animation( stickyMh 0.3s ease-in );
			}

			.sticky-menu.sticky-bar-out.admin-bar & {
				top: 32px;

				@media screen and (max-width: 782px) {
					top: 46px;
				}

				@media screen and (max-width: 600px) {
					top: 0;
				}
			}
		}
	}

	.top-bar {
		background: #fff;
		border-bottom: 1px solid $color__background-hr-dark;
		@include clearfix;
		position: relative;
		z-index: 9999;

		@at-root .header-design-2 & {
			border-top: 1px solid $color__background-hr-dark;
		}

		@at-root .homepage-has-slider.header-design-2 & {
			border-bottom: none;
		}

		> .container {
			align-items: center;
			display: flex;
			min-height: 60px;
			justify-content: space-between;
		}
	}

	.top-bar-sentinel {
		box-sizing: border-box;
	}

	.site-branding {
		padding: $masthead__padding 0;
		text-align: center;

		.site-title {
			font-family: $font__details;
			font-weight: 300;
			@include font-size(4);
			letter-spacing: 4px;
			line-height: normal;
			margin: 0;
			text-align: center;
			text-transform: uppercase;
			word-break: break-all;
			word-break: break-word;

			@media (max-width: 480px) {
				@include font-size(3.2);
			}

			a {
				color: $color__text-dark;
				text-decoration: none;
			}
		}

		a {
			display: inline-block;
		}

		.site-description {
			@include font-size(0.9333);
			line-height: 1.7142;
			margin-bottom: 0;
			text-align: center;
		}

		@at-root .header-design-4 & {
			display: inline-block;
			float: left;
			padding: calc(#{$masthead__padding} / 2) 0;

			.site-title {
				@include font-size(2.5);
				text-align: left;

				@media (max-width: 480px) {
					@include font-size(1.8);
				}
			}
		}

		@at-root body.sticky-bar-out .alt-logo,
		.alt-logo-scroll {
			display: none;
		}

		@at-root body.sticky-bar-out #masthead .alt-logo-scroll {
			display: block;
		}
	}

	#masthead-widgets {
		@include clearfix;
		margin: $masthead__padding auto;

		.widgets {

			@for $i from 1 through 10 {
				$margin: ($i - 1) * 2.5;
				&.widgets-#{$i} .widget {
					width: (100% - $margin) / $i;
				}
			}

			.widget {
				box-sizing: content-box;
				margin-right: 2.5%;
				float: left;

				&:last-of-type {
					margin-right: 0;
				}

				@media (max-width: 768px) {
					float: none;
					margin: 0;
					width: 100% !important;
				}
			}
		}
	}

	@at-root {
		.archive &,
		.search & {
			margin-bottom: 60px;
		}
	}

	.main-navigation-bar {
		border-top: 1px solid $color__background-hr-dark;
		@include clearfix;
		text-align: center;

		@at-root .header-design-4 & {
			border-top: none;
		}
	}
}

.homepage-has-slider {

	#masthead {
		border-bottom: none;
		margin-bottom: 0;
	}

	.site-content {
		padding-top: 0;
	}
}

